# Approximation_class

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake
examples/: CMakeLists.txt  cmake_install.cmake  simple_2d_linear_interpolation_example.f90  simple_3d_linear_interpolation_example.f90
src/: CMakeLists.txt  cmake_install.cmake  mod_ac_linear.f90  mod_aux_precision.f90  mod_aux_procs_for_tests.f90  mod_aux_string_functions.f90  mod_feqparse.f90  mod_math_lib.f90
